Users can register on site

--- a/app/assets/stylesheets/biovision/vars.scss
+++ b/app/assets/stylesheets/biovision/vars.scss
@@ -42,4 +42,7 @@
   --link-color-visited: #{$link-color-visited};
   --link-color-active: #{$link-color-active};
   --link-color-hover: #{$link-color-hover};
+
+  --content-width: #{$content-width};
+  --content-width-min: #{$content-width-min};
 }
