--- a/app/assets/stylesheets/biovision/biovision.scss
+++ b/app/assets/stylesheets/biovision/biovision.scss
@@ -18,6 +18,7 @@ html {
 body {
   font-size: var(--font-size-normal);
   margin: 0;
+  min-width: var(--content-width-min);
   padding: 0;
 }
 
@@ -58,4 +59,75 @@ button,
 input,
 textarea {
   font-size: inherit;
+}
+
+.content-wrapper {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: var(--content-width);
+}
+
+.hidden,
+[hidden] {
+  display: none !important;
+}
+
+.visually-hidden {
+  border: none;
+  clip: rect(0 0 0 0);
+  height: auto;
+  left: -10000rem;
+  margin: 0;
+  opacity: .05;
+  overflow: hidden;
+  padding: 0;
+  pointer-events: none;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+
+.proportional-container {
+  padding: 0;
+  position: relative;
+
+  > * {
+    bottom: 0;
+    display: block;
+    height: 100%;
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 100%;
+  }
+
+  &::before {
+    content: '\A';
+    display: block;
+  }
+
+  &.r-1x1::before {
+    padding-top: 100%;
+  }
+
+  &.r-5x4::before {
+    padding-top: 80%;
+  }
+
+  &.r-4x3::before {
+    padding-top: 75%;
+  }
+
+  &.r-3x2::before {
+    padding-top: 66.67%;
+  }
+
+  &.r-16x9::before {
+    padding-top: 56.25%;
+  }
+
+  &.r-2x1::before {
+    padding-top: 50%;
+  }
 }
