see #1, joining, logging in and out

--- a/app/assets/stylesheets/biovision/biovision.scss
+++ b/app/assets/stylesheets/biovision/biovision.scss
@@ -1,5 +1,3 @@
-@import "vars";
-
 *,
 ::after,
 ::before {
@@ -7,6 +5,7 @@
 }
 
 html {
+  color: var(--text-color-primary);
   font: 400 10px var(--font-family-main);
   margin: 0;
   padding: 0;
@@ -131,3 +130,5 @@ textarea {
     padding-top: 50%;
   }
 }
+
+@import "biovision/biovision/messages";
