--- a/app/assets/stylesheets/biovision/themes/default_theme/layout.scss
+++ b/app/assets/stylesheets/biovision/themes/default_theme/layout.scss
@@ -1,4 +1,5 @@
 @import "biovision/themes/default_theme/components";
+@import "biovision/themes/default_theme/layout/header";
 
 .breadcrumbs {
   a {
