--- a/app/views/layouts/application/_header.html.erb
+++ b/app/views/layouts/application/_header.html.erb
@@ -1,4 +1,9 @@
 <header class="main-header">
   <div class="content-wrapper">
+    <figure class="logo">
+      <%= link_to(image_tag('biovision/placeholders/1x1.svg', alt: ''), root_path) %>
+    </figure>
+    <nav></nav>
+    <%= render partial: 'layouts/application/header/authentication' %>
   </div>
 </header>
