--- a/app/assets/stylesheets/biovision/default.scss
+++ b/app/assets/stylesheets/biovision/default.scss
@@ -50,3 +50,8 @@ $link-color: rgb(20, 127, 255) !default;
 $link-color-visited: rgb(20, 77, 250) !default;
 $link-color-active: rgb(255, 77, 20) !default;
 $link-color-hover: rgb(255, 77, 20) !default;
+
+$input-border: hsl(0, 0%, 75%) !default;
+$input-border-focus: hsl(0, 0%, 50%) !default;
+$input-border-invalid: hsl(0, 75%, 50%) !default;
+$input-border-invalid-focus: hsl(0, 50%, 50%) !default;
