--- a/app/assets/stylesheets/biovision/admin/vars.scss
+++ b/app/assets/stylesheets/biovision/admin/vars.scss
@@ -50,4 +50,7 @@
   --input-border-focus: #{$input-border-focus};
   --input-border-invalid: #{$input-border-invalid};
   --input-border-invalid-focus: #{$input-border-invalid-focus};
+
+  --row-background-even: #{$row-background-even};
+  --row-background-odd: #{$row-background-odd};
 }
