--- a/app/views/layouts/application/_footer.html.erb
+++ b/app/views/layouts/application/_footer.html.erb
@@ -1,5 +1,8 @@
 <footer class="main-footer">
   <div class="content-wrapper">
     <div class="copyright">&copy; <%= t(:copyright) %></div>
+    <% if Biovision::Components::BaseComponent.privileged?(current_user) %>
+      <%= link_to(t('admin.index.index.nav_text'), admin_path) %>
+    <% end %>
   </div>
 </footer>
