fix #2, saving component settings

--- a/app/views/admin/index/index.html.erb
+++ b/app/views/admin/index/index.html.erb
@@ -5,7 +5,7 @@
 
   <%=
     render(
-        partial: 'admin/index/components',
+        partial: 'admin/components/list',
         locals: {
             collection: BiovisionComponent.list_for_administration
         }
