--- a/app/views/admin/components/settings/_parameters.html.erb
+++ b/app/views/admin/components/settings/_parameters.html.erb
@@ -4,14 +4,20 @@
 >
   <h2><%= t('.heading') %></h2>
 
-  <dl>
+  <dl class="fields">
     <% parameters.each do |parameter, value| %>
       <% element_id = "parameter-#{parameter}" %>
       <div>
         <dt><%= label_tag(element_id, parameter) %></dt>
         <dd>
           <%=
-            text_field_tag(parameter, value, autocomplete: :off, id: element_id)
+            text_field_tag(
+                parameter,
+                value,
+                autocomplete: :off,
+                class: 'input-text',
+                id: element_id
+            )
           %>
         </dd>
       </div>
