--- a/app/views/admin/navigation_groups/entity/_in_list.html.erb
+++ b/app/views/admin/navigation_groups/entity/_in_list.html.erb
@@ -7,5 +7,6 @@
 
   <ul class="actions">
     <li><%= edit_icon(edit_navigation_group_path(id: entity.id)) %></li>
+    <li class="danger"><%= destroy_icon(@entity) %></li>
   </ul>
 </div>
