--- a/app/views/dynamic_blocks/edit.html.erb
+++ b/app/views/dynamic_blocks/edit.html.erb
@@ -1,8 +1,8 @@
 <% content_for :meta_title, t('.title') %>
 <% content_for :breadcrumbs do %>
   <%= admin_biovision_component_link(component_handler.component) %>
-  <%= link_to(t('admin.navigation_groups.nav_item.text'), admin_navigation_groups_path) %>
-  <%= admin_navigation_group_link(@entity) %>
+  <%= link_to(t('admin.dynamic_blocks.nav_item.text'), admin_dynamic_blocks_path) %>
+  <%= admin_dynamic_block_link(@entity) %>
   <span><%= t('.nav_text') %></span>
 <% end %>
 
@@ -10,7 +10,7 @@
   <h1><%= t('.heading') %></h1>
 
   <ul class="actions">
-    <li><%= return_icon(admin_navigation_group_path(id: @entity.id)) %></li>
+    <li><%= return_icon(admin_dynamic_block_path(id: @entity.id)) %></li>
     <li class="danger"><%= destroy_icon(@entity) %></li>
   </ul>
 
