--- a/app/views/admin/components/links/_content.html.erb
+++ b/app/views/admin/components/links/_content.html.erb
@@ -1,2 +1,3 @@
 <li><%= render 'admin/navigation_groups/nav_item' %></li>
 <li><%= render 'admin/dynamic_blocks/nav_item' %></li>
+<li><%= render 'admin/dynamic_pages/nav_item' %></li>
