--- a/app/views/shared/forms/_simple_image.html.erb
+++ b/app/views/shared/forms/_simple_image.html.erb
@@ -1,4 +1,54 @@
+<%
+  entity = f.object
+  model_name = entity.class.to_s.underscore
+  img = entity.simple_image
+  src = img&.image.blank? ? 'biovision/placeholders/3x2.svg' : img.image.medium_url
+  handler_url ||= admin_component_images_path(slug: component_handler.class.slug)
+%>
 <div>
-  <dt><%= f.label :simple_image %></dt>
-  <dd>To be implemented&hellip;</dd>
+  <dt><%= f.label :simple_image_id %></dt>
+  <dd class="js-simple-image-upload">
+    <figure class="preview" role="group" id="<%= model_name %>-image">
+      <%=
+        label_tag(
+            "#{model_name}_image",
+            image_tag(src, alt: ''),
+            class: 'current-image'
+        )
+      %>
+      <figcaption class="js-change">
+        <div class="buttons">
+          <%=
+            button_tag(
+                'Загрузить',
+                class: 'button button-ghost js-new-image',
+                data: {
+                    url: handler_url,
+                    image: "#{model_name}-image"
+                },
+                type: 'button'
+            )
+          %>
+          <%=
+            button_tag(
+                'Выбрать',
+                class: 'button button-ghost js-select-image',
+                data: { url: handler_url },
+                type: 'button'
+            )
+          %>
+        </div>
+        <div
+          class="container"
+          data-text="<%= t('.upload') %>"
+          data-caption="<%= t('activerecord.attributes.simple_image.caption') %>"
+          data-image-alt-text="<%= t('attributes.image_alt_text') %>"
+          data-source-link="<%= t('activerecord.attributes.simple_image.source_link') %>"
+          data-source-name="<%= t('activerecord.attributes.simple_image.source_name') %>"
+        ></div>
+      </figcaption>
+    </figure>
+    <div class="guideline"><%= t('.guideline') %></div>
+    <%= f.hidden_field(:simple_image_id) %>
+  </dd>
 </div>
