--- a/app/views/admin/dynamic_pages/entity/_in_list.html.erb
+++ b/app/views/admin/dynamic_pages/entity/_in_list.html.erb
@@ -1,6 +1,6 @@
 <figure class="image"><%= simple_image_preview(entity) %></figure>
 <div class="data">
-  <div><%= admin_dynamic_page_link(entity) %></div>
+  <div><%= admin_entity_link(entity) %></div>
   <% unless entity.name.blank? %>
     <div class="info"><%= entity.name %></div>
   <% end %>
