--- a/app/views/admin/navigation_groups/entity/_in_list.html.erb
+++ b/app/views/admin/navigation_groups/entity/_in_list.html.erb
@@ -1,5 +1,5 @@
 <div class="data">
-  <div><%= admin_navigation_group_link(entity) %></div>
+  <div><%= admin_entity_link(entity) %></div>
   <div class="info"><%= entity.slug %></div>
   <div class="secondary info">
     <%= t(:page_count, count: entity.dynamic_pages_count) %>
