--- a/app/views/navigation_groups/edit.html.erb
+++ b/app/views/navigation_groups/edit.html.erb
@@ -2,7 +2,7 @@
 <% content_for :breadcrumbs do %>
   <%= admin_biovision_component_link(component_handler.component) %>
   <%= link_to(t('admin.navigation_groups.nav_item.text'), admin_navigation_groups_path) %>
-  <%= admin_navigation_group_link(@entity) %>
+  <%= admin_entity_link(@entity) %>
   <span><%= t('.nav_text') %></span>
 <% end %>
 
