--- a/app/views/dynamic_blocks/edit.html.erb
+++ b/app/views/dynamic_blocks/edit.html.erb
@@ -2,7 +2,7 @@
 <% content_for :breadcrumbs do %>
   <%= admin_biovision_component_link(component_handler.component) %>
   <%= link_to(t('admin.dynamic_blocks.nav_item.text'), admin_dynamic_blocks_path) %>
-  <%= admin_dynamic_block_link(@entity) %>
+  <%= admin_entity_link(@entity) %>
   <span><%= t('.nav_text') %></span>
 <% end %>
 
