--- a/app/views/dynamic_pages/edit.html.erb
+++ b/app/views/dynamic_pages/edit.html.erb
@@ -1,8 +1,8 @@
 <% content_for :meta_title, t('.title') %>
 <% content_for :breadcrumbs do %>
   <%= admin_biovision_component_link(component_handler.component) %>
-  <%= link_to(t('admin.dynamic_blocks.nav_item.text'), admin_dynamic_blocks_path) %>
-  <%= admin_dynamic_block_link(@entity) %>
+  <%= link_to(t('admin.dynamic_pages.nav_item.text'), admin_dynamic_pages_path) %>
+  <%= admin_entity_link(@entity) %>
   <span><%= t('.nav_text') %></span>
 <% end %>
 
