Added shared parts for entity handling

--- a/app/views/admin/dynamic_blocks/show.html.erb
+++ b/app/views/admin/dynamic_blocks/show.html.erb
@@ -27,13 +27,5 @@
     <%= render partial: 'shared/entity/timestamps', locals: { entity: @entity } %>
   </dl>
 
-  <%=
-    render(
-        partial: 'shared/admin/toggleable',
-        locals: {
-            entity: @entity,
-            url: toggle_admin_dynamic_block_path(id: @entity.id)
-        }
-    )
-  %>
+  <%= render(partial: 'shared/admin/toggle', locals: { entity: @entity }) %>
 </article>
