--- a/app/views/admin/navigation_groups/show.html.erb
+++ b/app/views/admin/navigation_groups/show.html.erb
@@ -13,11 +13,7 @@
   </nav>
 
   <dl class="fields">
-    <div>
-      <dt><%= @entity.class.human_attribute_name(:name) %></dt>
-      <dd><%= @entity.name %></dd>
-    </div>
-
+    <%= render partial: 'shared/entity/text_field', locals: { entity: @entity, field: :name } %>
     <%= render partial: 'shared/entity/slug', locals: { entity: @entity } %>
     <%= render partial: 'shared/entity/timestamps', locals: { entity: @entity } %>
   </dl>
