--- a/app/views/authentication/new.html.erb
+++ b/app/views/authentication/new.html.erb
@@ -15,7 +15,7 @@
     %>
 
     <nav>
-      <%= link_to t('my.recoveries.show.nav_text'), my_recovery_path, class: 'button-nav' %>
+      <%= link_to t('my.recoveries.show.nav_text'), my_recovery_path, class: 'button button-secondary' %>
     </nav>
   </div>
 </article>
