--- a/app/views/my/profiles/new.html.erb
+++ b/app/views/my/profiles/new.html.erb
@@ -11,7 +11,7 @@
 
     <nav>
       <p><%= t('.already_joined') %></p>
-      <%= link_to(t('authentication.new.nav_text'), login_path, class: 'button-nav') %>
+      <%= link_to(t('authentication.new.nav_text'), login_path, class: 'button button-ghost') %>
     </nav>
   </div>
 </article>
