--- a/app/views/profiles/_profile.html.erb
+++ b/app/views/profiles/_profile.html.erb
@@ -10,7 +10,7 @@
 
     <% if current_user == user %>
       <nav>
-        <%= link_to t(:edit), edit_my_profile_path, class: 'button-action' %>
+        <%= link_to t(:edit), edit_my_profile_path, class: 'button button-primary' %>
       </nav>
     <% end %>
 
