--- a/app/views/shared/entity/_text_fields.html.erb
+++ b/app/views/shared/entity/_text_fields.html.erb
@@ -1,4 +1,4 @@
-<% list.each do |attribute| %>
+<% fields.each do |attribute| %>
   <% next if entity.attributes[attribute].blank? %>
   <div>
     <dt>
