--- a/app/views/admin/dynamic_pages/show.html.erb
+++ b/app/views/admin/dynamic_pages/show.html.erb
@@ -15,18 +15,9 @@
   <dl class="fields">
     <%= render partial: 'shared/entity/slug', locals: { entity: @entity } %>
     <%= render partial: 'shared/entity/language', locals: { entity: @entity } %>
-    <%= render partial: 'shared/entity/text_fields', locals: { entity: @entity, list: %w[name url] } %>
+    <%= render partial: 'shared/entity/text_fields', locals: { entity: @entity, fields: %w[name url] } %>
     <%= render partial: 'shared/entity/simple_image', locals: { entity: @entity } %>
-
-    <div>
-      <dt><%= t('activerecord.attributes.dynamic_page.body') %></dt>
-      <dd>
-        <div class="text">
-          <%= raw @entity.body %>
-        </div>
-      </dd>
-    </div>
-
+    <%= render partial: 'shared/entity/raw_text_field', locals: { entity: @entity, field: :body } %>
     <%= render partial: 'shared/entity/uuid', locals: { entity: @entity } %>
     <%= render partial: 'shared/entity/timestamps', locals: { entity: @entity } %>
   </dl>
