--- a/app/views/navigation_groups/_form.html.erb
+++ b/app/views/navigation_groups/_form.html.erb
@@ -11,47 +11,14 @@
   <%= render partial: 'shared/list_of_errors', locals: { entity: entity } %>
 
   <dl class="fields">
-    <div>
-      <dt><%= f.label :name %></dt>
-      <dd>
-        <%=
-          f.text_field(
-              :name,
-              class: "input-text",
-              data: { check: :name },
-              maxlength: NavigationGroup::NAME_LIMIT,
-              required: true,
-              size: nil
-          )
-        %>
-        <div class="check-result-error" data-field="name"></div>
-        <div class="guideline"><%= t('.guidelines.name') %></div>
-      </dd>
-    </div>
-
-    <div>
-      <dt><%= f.label :slug %></dt>
-      <dd>
-        <%=
-          f.text_field(
-              :slug,
-              class: 'input-text',
-              data: { check: :slug },
-              maxlength: NavigationGroup::SLUG_LIMIT,
-              required: true,
-              size: nil
-          )
-        %>
-        <div class="check-result-error" data-field="slug"></div>
-        <div class="guideline"><%= t('.guidelines.slug') %></div>
-      </dd>
-    </div>
+    <%= render partial: 'shared/forms/text_field', locals: { f: f, field: :name } %>
+    <%= render partial: 'shared/forms/text_field', locals: { f: f, field: :slug } %>
   </dl>
 
   <%= render 'shared/forms/state_container' %>
 
   <div class="buttons">
     <%= hidden_field_tag :entity_id, entity.id %>
-    <%= f.button t(:save), class: 'button-save' %>
+    <%= f.button t(:save), class: 'button button-save' %>
   </div>
 <% end %>
