--- a/app/views/shared/forms/_text_area.html.erb
+++ b/app/views/shared/forms/_text_area.html.erb
@@ -8,6 +8,7 @@
       manlength: length_options[:maximum],
       minlength: length_options[:minimum],
       required: validators.select { |v| v.kind == :presence }.any?,
+      rows: 10,
       size: nil
   }.merge(local_assigns[:options].to_h)
   guide_key = "#{model.table_name}.form.guidelines.#{field}"
@@ -15,7 +16,7 @@
 <div>
   <dt><%= f.label field %></dt>
   <dd>
-    <%= f.text_field(field, options) %>
+    <%= f.text_area(field, options) %>
     <div class="check-result-error" data-field="<%= field %>"></div>
     <% if I18n.exists?(guide_key) %>
       <div class="guideline"><%= t(guide_key) %></div>
