--- a/app/views/admin/dynamic_pages/_form.html.erb
+++ b/app/views/admin/dynamic_pages/_form.html.erb
@@ -1,13 +1,4 @@
-<% model_name = entity.class.to_s.underscore %>
-<%=
-  form_with(
-      model: entity,
-      html: {
-          id: "#{model_name}-form",
-          data: { check_url: check_dynamic_pages_path }
-      }
-  ) do |f|
-%>
+<%= form_with(Biovision::Components::BaseComponent.form_options(entity)) do |f| %>
   <%= render partial: 'shared/list_of_errors', locals: { entity: entity } %>
 
   <dl class="fields">
