--- a/app/views/admin/dynamic_pages/index.html.erb
+++ b/app/views/admin/dynamic_pages/index.html.erb
@@ -7,8 +7,8 @@
 <article>
   <h1><%= t('.heading') %></h1>
 
-  <nav>
-    <%= create_button(new_dynamic_page_path) %>
+  <nav class="entity-actions">
+    <%= create_icon(new_admin_dynamic_page_path) %>
   </nav>
 
   <%= render partial: 'shared/admin/list', locals: { collection: @collection } %>
