--- a/app/views/admin/navigation_groups/entity/_in_list.html.erb
+++ b/app/views/admin/navigation_groups/entity/_in_list.html.erb
@@ -5,8 +5,8 @@
     <%= t(:page_count, count: entity.dynamic_pages_count) %>
   </div>
 
-  <ul class="actions">
-    <li><%= edit_icon(edit_navigation_group_path(id: entity.id)) %></li>
-    <li class="danger"><%= destroy_icon(@entity) %></li>
-  </ul>
+  <div class="entity-actions">
+    <%= edit_icon(entity) %>
+    <%= destroy_icon(entity) %>
+  </div>
 </div>
