--- a/app/views/shared/entity/edit.html.erb
+++ b/app/views/shared/entity/edit.html.erb
@@ -1,18 +1,18 @@
-<% table_name = @entity.class.table_name%>
-<% content_for :meta_title, t("#{controller_name}.edit.title") %>
+<% prefix = controller_path.gsub('/', '.')%>
+<% content_for :meta_title, t("#{prefix}.edit.title") %>
 <% content_for :breadcrumbs do %>
   <%= admin_biovision_component_link(component_handler.component) %>
-  <%= link_to(t("admin.#{table_name}.nav_item.text"), "/admin/#{table_name}") %>
+  <%= link_to(t("#{prefix}.nav_item.text"), "/#{controller_path}") %>
   <%= admin_entity_link(@entity) %>
   <span><%= t('.nav_text') %></span>
 <% end %>
 
 <article>
-  <h1><%= t("#{controller_name}.edit.heading") %></h1>
+  <h1><%= t("#{prefix}.edit.heading") %></h1>
 
-  <ul class="actions">
-    <li class="danger"><%= destroy_icon(@entity) %></li>
-  </ul>
+  <nav class="entity-actions">
+    <%= destroy_icon(@entity) %>
+  </nav>
 
-  <%= render partial: "#{controller_name}/form", locals: { entity: @entity } %>
+  <%= render partial: "#{controller_path}/form", locals: { entity: @entity } %>
 </article>
