--- a/app/views/shared/entity/new.html.erb
+++ b/app/views/shared/entity/new.html.erb
@@ -1,13 +1,13 @@
-<% table_name = @entity.class.table_name %>
-<% content_for :meta_title, t("#{controller_name}.new.title") %>
+<% prefix = controller_path.gsub('/', '.') %>
+<% content_for :meta_title, t("#{prefix}.new.title") %>
 <% content_for :breadcrumbs do %>
   <%= admin_biovision_component_link(component_handler.component) %>
-  <%= link_to(t("admin.#{table_name}.nav_item.text"), "/admin/#{table_name}") %>
+  <%= link_to(t("#{prefix}.nav_item.text"), "/#{controller_path}") %>
   <span><%= t('.nav_text') %></span>
 <% end %>
 
 <article>
-  <h1><%= t("#{controller_name}.new.heading") %></h1>
+  <h1><%= t("#{prefix}.new.heading") %></h1>
 
-  <%= render partial: "#{controller_name}/form", locals: { entity: @entity } %>
+  <%= render partial: "#{controller_path}/form", locals: { entity: @entity } %>
 </article>
