Added fallback and world url for dynamic pages

--- a/app/assets/stylesheets/biovision/biovision.scss
+++ b/app/assets/stylesheets/biovision/biovision.scss
@@ -210,8 +210,8 @@ ul.actions {
     margin-left: var(--spacer-s);
   }
 
-  > a,
-  > button {
+  a,
+  button {
     display: inline-block;
     font-size: var(--font-size-decreased);
     height: 2.4rem;
