--- a/app/assets/stylesheets/biovision/themes/default_theme/layout.scss
+++ b/app/assets/stylesheets/biovision/themes/default_theme/layout.scss
@@ -4,13 +4,13 @@
 //* { outline: solid pink 1px }
 
 html {
-  height: 100%;
+  //height: 100%;
 }
 
 body {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  //height: 100%;
 }
 
 #main {
