--- a/app/views/shared/entity/new.html.erb
+++ b/app/views/shared/entity/new.html.erb
@@ -1,5 +1,8 @@
-<% prefix = controller_path.gsub('/', '.') %>
-<% content_for :meta_title, t("#{prefix}.new.title") %>
+<%
+  prefix = controller_path.gsub('/', '.')
+  default_title = "#{@entity.class.model_name.human}: #{t('.nav_text')}"
+%>
+<% content_for :meta_title, t("#{prefix}.new.title", default: default_title) %>
 <% content_for :breadcrumbs do %>
   <%= admin_biovision_component_link(component_handler.component) %>
   <%= link_to(t("#{prefix}.nav_item.text"), "/#{controller_path}") %>
@@ -7,7 +10,7 @@
 <% end %>
 
 <article>
-  <h1><%= t("#{prefix}.new.heading") %></h1>
+  <h1><%= t("#{prefix}.new.heading", default: default_title) %></h1>
 
   <%= render partial: "#{controller_path}/form", locals: { entity: @entity } %>
 </article>
