--- a/app/assets/stylesheets/biovision/themes/default_theme/components.scss
+++ b/app/assets/stylesheets/biovision/themes/default_theme/components.scss
@@ -1,3 +1,1 @@
-@import "biovision/components/forms";
-@import "biovision/components/hamburger";
-@import "biovision/components/lists";
+@import "biovision/components";
