--- a/sample/app/assets/stylesheets/shared.scss
+++ b/sample/app/assets/stylesheets/shared.scss
@@ -49,4 +49,6 @@
 //$input-border-invalid: hsl(0, 75%, 50%);
 //$input-border-invalid-focus: hsl(0, 50%, 50%);
 
+//$form-control-color: hsl(220, 75%, 75%);
+
 @import "biovision/default";
