--- a/app/views/components/users/_login_form.html.erb
+++ b/app/views/components/users/_login_form.html.erb
@@ -1,4 +1,5 @@
-<%= form_with(url: login_path) do%>
+<%= form_with(url: login_path, id: 'login-form') do%>
+  <div class="errors"></div>
   <div class="fields">
     <div>
       <label class="floating-label">
@@ -32,7 +33,7 @@
     </div>
   </div>
   <div class="actions">
-    <%= button_tag t('.log_in'), class: 'button button-primary' %>
+    <%= button_tag t('.log_in'), class: 'button button-primary', name: nil %>
     <%=
       link_to(
         t('my.recoveries.show.nav_text'),
