Added styles for admin login page

--- a/app/assets/stylesheets/biovision/admin/layout.scss
+++ b/app/assets/stylesheets/biovision/admin/layout.scss
@@ -92,6 +92,7 @@ h2 {
 @import "biovision/components/forms";
 @import "biovision/components/lists";
 @import "biovision/components/buttons";
+@import "biovision/components/messages";
 @import "biovision/components/simple_image";
 @import "biovision/components/toggleable";
 @import "biovision/admin/components";
