--- a/app/views/components/users/_form_tabs.html.erb
+++ b/app/views/components/users/_form_tabs.html.erb
@@ -19,7 +19,12 @@
   <div class="tabs">
     <% tabs.each do |tab| %>
       <div class="tab <%= tab %>">
-        <%= render partial: "components/users/#{tab}_form" %>
+        <%=
+          render(
+            partial: "components/users/#{tab}_form",
+            locals: local_assigns
+          )
+        %>
       </div>
     <% end %>
   </div>
